Fix assignment URL

--- a/public/index.html
+++ b/public/index.html
@@ -1205,7 +1205,7 @@ Hugo Profile
                         
                         
                         <span class="float-end">
-                            <a class="btn btn-sm" href="http://localhost:1313/posts/1/assignment-1/" target="_blank">
+                            <a class="btn btn-sm" href="./posts/1/assignment-1/" target="_blank">
                                 View
                             </a>
                         </span>
