--- a/public/index.html
+++ b/public/index.html
@@ -856,7 +856,7 @@ Hugo Profile
                         
                         
                         <span class="float-end">
-                            <a class="btn btn-sm" href="./posts/1/Assignment-4/" target="_blank">
+                            <a class="btn btn-sm" href="./posts/1/assignment-4/" target="_blank">
                                 View
                             </a>
                         </span>
