Add google analytics

--- a/public/404.html
+++ b/public/404.html
@@ -28,6 +28,20 @@
 
 
 
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-GG0WJKJVBF"></script>
+      <script>
+        var doNotTrack = false;
+        if ( false ) {
+          var dnt = (navigator.doNotTrack || window.doNotTrack || navigator.msDoNotTrack);
+          var doNotTrack = (dnt == "1" || dnt == "yes");
+        }
+        if (!doNotTrack) {
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'G-GG0WJKJVBF');
+        }
+      </script>
 <meta property="og:url" content="https://odai357.github.io/pehtheme/404.html">
   <meta property="og:site_name" content="Hugo Profile">
   <meta property="og:title" content="404 Page not found">
