Update page title

--- a/public/index.html
+++ b/public/index.html
@@ -44,15 +44,15 @@
         }
       </script>
 <meta property="og:url" content="https://odai357.github.io/pehtheme/">
-  <meta property="og:site_name" content="Hugo Profile">
-  <meta property="og:title" content="Hugo Profile">
+  <meta property="og:site_name" content="Odai-泽鑫 - Profile">
+  <meta property="og:title" content="Odai-泽鑫 - Profile">
   <meta property="og:description" content="Text about my cool site">
   <meta property="og:locale" content="en_us">
   <meta property="og:type" content="website">
 
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Hugo Profile">
+  <meta name="twitter:title" content="Odai-泽鑫 - Profile">
   <meta name="twitter:description" content="Text about my cool site">
 
 
@@ -129,7 +129,7 @@
   
 
   <title>
-Hugo Profile
+Odai-泽鑫 - Profile
 
   </title>
 </head>
@@ -1030,7 +1030,7 @@ Hugo Profile
         <div class="col-md-4 text-center">
             
                 <div class="pb-2">
-                    <a href="https://odai357.github.io/pehtheme/" title="Hugo Profile">
+                    <a href="https://odai357.github.io/pehtheme/" title="Odai-泽鑫 - Profile">
                         <img alt="Footer logo" src="./images/con1.png"
                             height="40px" width="40px">
                     </a>
