--- a/public/404.html
+++ b/public/404.html
@@ -43,7 +43,7 @@
         }
       </script>
 <meta property="og:url" content="https://odai357.github.io/pehtheme/404.html">
-  <meta property="og:site_name" content="Hugo Profile">
+  <meta property="og:site_name" content="Odai-泽鑫 - Profile">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Text about my cool site">
   <meta property="og:locale" content="en_us">
@@ -123,7 +123,7 @@
   
 
   <title>
-Hugo Profile | Page not found
+Odai-泽鑫 - Profile | Page not found
 
   </title>
 </head>
@@ -422,7 +422,7 @@ Hugo Profile | Page not found
         <div class="col-md-4 text-center">
             
                 <div class="pb-2">
-                    <a href="https://odai357.github.io/pehtheme/" title="Hugo Profile">
+                    <a href="https://odai357.github.io/pehtheme/" title="Odai-泽鑫 - Profile">
                         <img alt="Footer logo" src="./images/con1.png"
                             height="40px" width="40px">
                     </a>
