Add projects page

--- a/public/certificates/index.html
+++ b/public/certificates/index.html
@@ -298,6 +298,13 @@ Certificates | Odai-泽鑫 - Profile
                             Certificates
                         </a>
                     </li>
+                    
+                    <li class="nav-item navbar-text">
+                        <a class="nav-link" href="../projects"
+                            aria-label="contact">
+                            Projects
+                        </a>
+                    </li>
 
                     
                     <li class="nav-item navbar-text">
