--- a/public/404.html
+++ b/public/404.html
@@ -292,6 +292,13 @@ Odai-泽鑫 - Profile | Page not found
                             Certificates
                         </a>
                     </li>
+                    
+                    <li class="nav-item navbar-text">
+                        <a class="nav-link" href="./projects"
+                            aria-label="contact">
+                            Projects
+                        </a>
+                    </li>
 
                     
                     <li class="nav-item navbar-text">
