--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -405,7 +405,7 @@ Projects | Odai-泽鑫 - Profile
                 <img src="../images/p2_2.png" alt="Image 2" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-src="../images/p2_2.png">
               </div>
               <div class="col-6 col-sm-4 col-md-3 col-lg-2">
-                <img src="../images/p2_3.jpg" alt="Image 3" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-src="../images/p2_3.png">
+                <img src="../images/p2_3.jpg" alt="Image 3" data-bs-toggle="modal" data-bs-target="#imageModal" data-bs-src="../images/p2_3.jpg">
               </div>
             </div>
           </div>
